--- a/CodingEventsDemo/Views/Events/Add.cshtml
+++ b/CodingEventsDemo/Views/Events/Add.cshtml
@@ -1,6 +1,11 @@
 ﻿<h1>Add Event</h1>
 
 <form method="post">
+    <label for="name">Name</label>
     <input name="name" type="text" />
+    
+    <label for="desc">Description</label>
+    <input name="desc" />
+    
     <input type="submit" value="Add Event" />
 </form>
