--- a/CodingEventsDemo/Views/EventCategory/Create.cshtml
+++ b/CodingEventsDemo/Views/EventCategory/Create.cshtml
@@ -2,3 +2,11 @@
 
 <h1>Create Category</h1>
 
+<form asp-controller="EventCategory" asp-action="Add" method="post">
+    <div class="form-group">
+        <label asp-for="Name"></label>
+        <input asp-for="Name" />
+        <span asp-validation-for="Name"></span>
+    </div>
+    <input type="submit" value="Create Category" />
+</form>
